--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name='impact-site-verification' value='f0327804-eb53-44fa-a093-1b165e3ec144'>
     <title>Vite + React + TS</title>
   </head>
   <body>
